--- a/docs/DocGenerator.Web.styles.css
+++ b/docs/DocGenerator.Web.styles.css
@@ -1,1 +1,98 @@
-﻿a.navbar-brand[b-fdf7rmk0xj]{white-space:normal;text-align:center;word-break:break-all}a[b-fdf7rmk0xj]{color:#0077cc}.btn-primary[b-fdf7rmk0xj]{color:#fff;background-color:#1b6ec2;border-color:#1861ac}.nav-pills .nav-link.active[b-fdf7rmk0xj],.nav-pills .show > .nav-link[b-fdf7rmk0xj]{color:#fff;background-color:#1b6ec2;border-color:#1861ac}.border-top[b-fdf7rmk0xj]{border-top:1px solid #e5e5e5}.border-bottom[b-fdf7rmk0xj]{border-bottom:1px solid #e5e5e5}.box-shadow[b-fdf7rmk0xj]{box-shadow:0 .25rem .75rem rgba(0,0,0,.05)}button.accept-policy[b-fdf7rmk0xj]{font-size:1rem;line-height:inherit}.footer[b-fdf7rmk0xj]{position:absolute;bottom:0;width:100%;white-space:nowrap;line-height:60px}a.navbar-brand[b-y0bvellyvm]{white-space:normal;text-align:center;word-break:break-all}a[b-y0bvellyvm]{color:#0077cc}.btn-primary[b-y0bvellyvm]{color:#fff;background-color:#1b6ec2;border-color:#1861ac}.nav-pills .nav-link.active[b-y0bvellyvm],.nav-pills .show > .nav-link[b-y0bvellyvm]{color:#fff;background-color:#1b6ec2;border-color:#1861ac}.border-top[b-y0bvellyvm]{border-top:1px solid #e5e5e5}.border-bottom[b-y0bvellyvm]{border-bottom:1px solid #e5e5e5}.box-shadow[b-y0bvellyvm]{box-shadow:0 .25rem .75rem rgba(0,0,0,.05)}button.accept-policy[b-y0bvellyvm]{font-size:1rem;line-height:inherit}.footer[b-y0bvellyvm]{position:absolute;bottom:0;width:100%;white-space:nowrap;line-height:60px}
+﻿/* _content/DocGenerator.Web/Pages/Shared/_Layout.cshtml.rz.scp.css */
+/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
+for details on configuring this project to bundle and minify static web assets. */
+
+a.navbar-brand[b-fdf7rmk0xj] {
+  white-space: normal;
+  text-align: center;
+  word-break: break-all;
+}
+
+a[b-fdf7rmk0xj] {
+  color: #0077cc;
+}
+
+.btn-primary[b-fdf7rmk0xj] {
+  color: #fff;
+  background-color: #1b6ec2;
+  border-color: #1861ac;
+}
+
+.nav-pills .nav-link.active[b-fdf7rmk0xj], .nav-pills .show > .nav-link[b-fdf7rmk0xj] {
+  color: #fff;
+  background-color: #1b6ec2;
+  border-color: #1861ac;
+}
+
+.border-top[b-fdf7rmk0xj] {
+  border-top: 1px solid #e5e5e5;
+}
+.border-bottom[b-fdf7rmk0xj] {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow[b-fdf7rmk0xj] {
+  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+button.accept-policy[b-fdf7rmk0xj] {
+  font-size: 1rem;
+  line-height: inherit;
+}
+
+.footer[b-fdf7rmk0xj] {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  white-space: nowrap;
+  line-height: 60px;
+}
+/* _content/DocGenerator.Web/Pages/Shared/_LayoutDataStandard.cshtml.rz.scp.css */
+/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
+for details on configuring this project to bundle and minify static web assets. */
+
+a.navbar-brand[b-y0bvellyvm] {
+  white-space: normal;
+  text-align: center;
+  word-break: break-all;
+}
+
+a[b-y0bvellyvm] {
+  color: #0077cc;
+}
+
+.btn-primary[b-y0bvellyvm] {
+  color: #fff;
+  background-color: #1b6ec2;
+  border-color: #1861ac;
+}
+
+.nav-pills .nav-link.active[b-y0bvellyvm], .nav-pills .show > .nav-link[b-y0bvellyvm] {
+  color: #fff;
+  background-color: #1b6ec2;
+  border-color: #1861ac;
+}
+
+.border-top[b-y0bvellyvm] {
+  border-top: 1px solid #e5e5e5;
+}
+.border-bottom[b-y0bvellyvm] {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow[b-y0bvellyvm] {
+  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+button.accept-policy[b-y0bvellyvm] {
+  font-size: 1rem;
+  line-height: inherit;
+}
+
+.footer[b-y0bvellyvm] {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  white-space: nowrap;
+  line-height: 60px;
+}
